--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,30 @@
 Version 6
-[x] It should have a function for toggling all todos.
-[x] if everything is false ==> change everything to true.
-[x] if everything is true ==> change everything to false.
-[x] if mixed ==> change everything to true.
+[] It should have a function for toggling all todos.
+[] if everything is false ==> change everything to true.
+[] if everything is true ==> change everything to false.
+[] if mixed ==> change everything to true.
 
 Version 5
-[x] It should have a function for displaying todos.
-[x] displayTodos should have show the todoText and completetd properties
+[] It should have a function for displaying todos.
+[] displayTodos should have show the todoText and completetd properties
 
 Version 4
-[x] It should have a function to Toggle a Todo
+[] It should have a function to Toggle a Todo
 
 Version 3
-[x] We should Initialize the todos variable with objects
-[x] The add function should add objects
-[x] The edit function should edit objects
+[] We should Initialize the todos variable with objects
+[] The add function should add objects
+[] The edit function should edit objects
 
 Version 2
-[x] It should have a function to add a Todo
-[x] It should have a function to edit a Todo
-[x] It should have a function to remove a Todo
+[] It should have a function to add a Todo
+[] It should have a function to edit a Todo
+[] It should have a function to remove a Todo
 
 
 Version 1
-[x] It should have a place to store Todos
-[x] It should have a way to display Todos
-[x] It should have a way to add a Todo
-[x] It should have a way to edit a Todo
-[x] It should have a way to remove a Todo
+[] It should have a place to store Todos
+[] It should have a way to display Todos
+[] It should have a way to add a Todo
+[] It should have a way to edit a Todo
+[] It should have a way to remove a Todo
